--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "hapi-cli": "./index.js"
+    "hapi-cli": "./index.js",
+    "hc": "./index.js"
   },
   "author": "AMoreaux",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.1.1",
-    "colors": "^1.1.2",
-    "commander": "^2.9.0",
-    "js-beautify": "^1.6.4",
-    "lodash": "^4.16.4"
+    "chalk": "^2.0.1",
+    "commander": "^2.11.0",
+    "hoek": "^4.1.1",
+    "js-beautify": "^1.6.4"
   },
   "devDependencies": {}
 }
