--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "url": "https://github.com/AMoreaux/hapi-cli"
   },
   "scripts": {
-    "test": "nyc mocha lib/tests/**/*.spec.js",
-    "coverage": "nyc report html _mocha lib/tests/generate.test.js"
+    "test": "mocha lib/tests/**/*.spec.js --timeout=10000 ",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "bin": {
     "hapi-cli": "./index.js",
@@ -28,8 +28,9 @@
     "chai": "^4.1.0",
     "chai-fs": "^1.0.0",
     "chai-json-schema": "^1.5.0",
+    "coveralls": "^2.13.1",
     "mocha": "^3.4.2",
-    "mock-stdin": "^0.3.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^11.0.3"
   }
 }
