--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "mocha lib/tests/**/*.spec.js --timeout=10000 ",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov",
     "eslint": "eslint lib/**"
   },
   "bin": {
@@ -18,6 +18,9 @@
     "hc": "./index.js"
   },
   "author": "AMoreaux",
+  "engines": {
+    "node": ">=8.1.3"
+  },
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.1.0",
