--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "mocha lib/tests/**/*.spec.js --timeout=10000 ",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls",
     "eslint": "eslint lib/**"
   },
   "bin": {
