--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/AMoreaux/hapi-cli"
   },
   "scripts": {
-    "test": "mocha lib/tests/**/*.spec.js --timeout=10000 ",
+    "test": "mocha lib/tests/**/*.spec.js",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls",
     "eslint": "eslint lib/**"
   },
