--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,6 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:latest
-        environment:
-          COVERALLS_REPO_TOKEN: FibklLYULkLZ4Kef0M5TPUwZx4A3pTJ1J
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
 
     working_directory: ~/hapi-cli
 
@@ -26,6 +19,6 @@ jobs:
       - run: sudo npm install nyc mocha chai chai-json-schema chai-fs -g
 
       # run tests!
-      - run: npm run coverage
+      - run: npm test
 
 
