--- a/assets/package.json
+++ b/assets/package.json
@@ -14,7 +14,7 @@
     "boom": "^7.1.1",
     "colors": "^1.1.2",
     "hapi": "^17.0.2",
-    "hapi-auth-jwt2": "^7.3.0",
+    "hapi-auth-jwt2": "salzhrani/hapi-auth-jwt2#v-17",
     "joi": "^13.0.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "4.13.4"
