minor update. MAJ dependencies

--- a/assets/package.json
+++ b/assets/package.json
@@ -9,14 +9,14 @@
   "author": "AMoreaux",
   "license": "MIT",
   "dependencies": {
-    "config": "^1.28.1",
+    "config": "^1.30.0",
     "bcrypt": "^1.0.3",
-    "boom": "^7.1.1",
-    "colors": "^1.1.2",
-    "hapi": "^17.0.2",
-    "hapi-auth-jwt2": "salzhrani/hapi-auth-jwt2#v-17",
+    "boom": "^7.2.0",
+    "colors": "^1.2.1",
+    "hapi": "^17.2.2",
+    "hapi-auth-jwt2": "^8.0.0",
     "joi": "^13.0.2",
-    "jsonwebtoken": "^8.1.0",
+    "jsonwebtoken": "^8.2.0",
     "mongoose": "4.13.4"
   }
 }
